[package]
name = "rsstreetview"
version = "0.1.0"
edition = "2021"
authors = ["TennisBowling"]
description = "Async Rust library for downloading Google Street View panoramas"
license = "MIT"

[lib]
name = "rsstreetview"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["webp"] }
thiserror = "2.0"
regex = "1.11"
futures = "0.3"
tokio = { version = "1.41", features = ["time", "rt"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
